Correct way to export json;

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<canvas id="myChart" width="400" height="200"></canvas>
 		<script>
-        var data = "{DATA}";
+        var data = {DATA};
         var ctx = document.getElementById("myChart").getContext('2d');
 		var myChart = new Chart(ctx, {
 			type: 'bar',
